--- a/public/index.css
+++ b/public/index.css
@@ -12,34 +12,135 @@
 
 /* Light Mode Variables */
 :root {
-	--background: white;
-	--text-primary: black;
-	--text-secondary: royalblue;
+	--transition-time: 0.5s;
+
+	--background: #edeff1;
+	--navbar: #f2f3f4;
+	--text-primary: #23272a;
+	--text-secondary: #5865f2;
 	--accent: purple;
+
+	--box-shadow-color: rgba(100, 100, 111, 0.2);
 }
 
 /* Dark Mode Variables */
 [data-theme="dark"] {
-	--background: black;
-	--text-primary: white;
-	--text-secondary: grey;
+	--background: #23272a;
+	--navbar: #2c2f33;
+	--text-primary: #edeff1;
+	--text-secondary: #5865f2;
 	--accent: darkred;
+
+	--box-shadow-color: rgba(231, 231, 255, 0.2);
+}
+
+html {
+	scroll-padding-top: 5rem;
+	scroll-behavior: smooth;
 }
 
 .app {
+	position: relative;
 	color: var(--text-primary);
 	background-color: var(--background);
 	font-size: large;
 	font-weight: bold;
-	padding: 20px;
-	height: 100vh;
-	transition: all 1s;
+	height: 100%;
+	transition: all var(--transition-time);
 }
 
-button {
+/* Nav Bar Styles */
+
+.navbar {
+	display: flex;
+	position: fixed;
+	top: 0;
+	z-index: 10;
+	width: 100%;
+	justify-content: flex-end;
+	padding: 0 0.75rem;
+	box-shadow: 0 7px 29px 0 var(--box-shadow-color);
+	background-color: var(--navbar);
+	transition: all var(--transition-time);
+}
+
+.navbar a {
+	color: inherit;
+	font-size: inherit;
+	text-decoration: none;
+}
+
+.navbar-links {
+	display: flex;
+	flex-direction: row;
+	list-style: none;
+	-webkit-user-select: none;
+	user-select: none;
+}
+
+.navbar-links li:hover,
+.navbar-links li:active {
+	color: var(--text-secondary);
+	transition: all var(--transition-time);
+}
+
+.navbar-links li,
+.resume-download {
+	display: flex;
+	align-items: center;
+	font-size: 0.75rem;
+	margin: 0.5rem 0.75rem;
+	cursor: pointer;
+}
+
+.resume-download {
+	background: transparent;
 	color: var(--text-primary);
-	background-color: var(--background);
-	border: 2px var(--text-primary) solid;
-	float: right;
-	transition: all 1s;
+	border: 2px solid var(--text-primary);
+	border-radius: 0.25rem;
+	padding: 0.35rem 0.6rem;
+	transition: all var(--transition-time);
+}
+
+.resume-download:hover,
+.resume-download:active {
+	background-color: var(--text-secondary);
+}
+
+.theme-button {
+	color: var(--text-primary);
+	background: transparent;
+	border: none;
+	transition: all var(--transition-time);
+}
+
+.theme-button:hover,
+.theme-button:active {
+	color: var(--text-secondary);
+}
+
+.theme-icon {
+	cursor: pointer;
+	width: 1.1rem;
+	height: 1.1rem;
+	vertical-align: -0.18rem;
+}
+
+/* Page Body Styles */
+
+.page-body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 3.9rem auto;
+	padding-top: 1.1rem;
+	margin-bottom: 0;
+	width: 800px;
+	z-index: 1;
+}
+
+.section {
+	color: var(--text-primary);
+	height: 1000px;
 }
