--- a/index.css
+++ b/index.css
@@ -14,22 +14,26 @@
 :root {
 	--transition-time: 0.5s;
 
-	--background: #edeff1;
+	--background: rgb(237, 239, 241);
 	--navbar: #f2f3f4;
-	--text-primary: #23272a;
+	--text-primary: rgb(35, 39, 42);
 	--text-secondary: #5865f2;
 	--accent: purple;
+
+	--modal-lock-color: 35, 39, 42;
 
 	--box-shadow-color: rgba(100, 100, 111, 0.2);
 }
 
 /* Dark Mode Variables */
 [data-theme="dark"] {
-	--background: #23272a;
+	--background: rgb(35, 39, 42);
 	--navbar: #2c2f33;
 	--text-primary: #edeff1;
 	--text-secondary: #5865f2;
 	--accent: darkred;
+
+	--modal-lock-color: 237, 239, 241;
 
 	--box-shadow-color: rgba(231, 231, 255, 0.2);
 }
@@ -126,6 +130,102 @@ html {
 	vertical-align: -0.18rem;
 }
 
+/* Side Navigation Styles */
+
+.side-navbar {
+	height: 100%;
+	width: 13rem;
+	position: fixed;
+	z-index: 5;
+	top: 0;
+	right: 0;
+	box-shadow: 0 7px 29px 0 var(--box-shadow-color);
+	background-color: var(--navbar);
+	overflow-x: hidden;
+	padding-top: 1.1rem;
+	transition: var(--transition-time);
+}
+
+.side-navbar.hide {
+	width: 0;
+}
+
+.modal-lock {
+	background-color: rgba(var(--modal-lock-color), 0.25);
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 4;
+}
+
+.modal-lock.hide {
+	background-color: rgba(var(--modal-lock-color), 0);
+	z-index: -1;
+	transition: all var(--transition-time);
+}
+
+.side-navbar-button {
+	position: fixed;
+	display: none;
+	z-index: 3;
+	top: 1rem;
+	left: 1rem;
+}
+
+.menu-button {
+	color: var(--text-primary);
+	background: transparent;
+	border: none;
+	transition: all var(--transition-time);
+}
+
+.menu-icon {
+	font-size: 1.25rem;
+}
+
+.side-navbar-links-top .theme-button {
+	padding-right: 0.75rem;
+}
+
+.side-navbar-links-top,
+.side-navbar-links {
+	display: flex;
+	align-items: center;
+	list-style: none;
+	-webkit-user-select: none;
+	user-select: none;
+}
+
+.side-navbar a {
+	color: inherit;
+	font-size: inherit;
+	text-decoration: none;
+}
+
+.side-navbar-links-top {
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+.side-navbar-links {
+	flex-direction: column;
+	padding-top: 0.5rem;
+}
+
+.side-navbar-links li:hover,
+.side-navbar-links li:active {
+	color: var(--text-secondary);
+	transition: all var(--transition-time);
+}
+
+.side-navbar-links li {
+	display: flex;
+	align-items: center;
+	font-size: 0.75rem;
+	margin: 0.5rem 0.75rem;
+	cursor: pointer;
+}
+
 /* Page Body Styles */
 
 .page-body {
@@ -136,11 +236,51 @@ html {
 	margin: 3.9rem auto;
 	padding-top: 1.1rem;
 	margin-bottom: 0;
-	width: 800px;
+	width: auto;
 	z-index: 1;
+	transition: margin var(--transition-time);
 }
 
 .section {
 	color: var(--text-primary);
 	height: 1000px;
+}
+
+/* Media Queries */
+
+/* Hide Side Nav on Screen Resize */
+@media (min-width: 441px) {
+	.side-navbar {
+		width: 0;
+	}
+}
+
+/* Shrink Navbar */
+@media (max-width: 800px) {
+	.navbar-links li,
+	.resume-download {
+		margin: 0.25rem 0.5rem;
+	}
+
+	.navbar-links li,
+	.resume-download {
+		font-size: 0.65rem;
+	}
+
+	.page-body {
+		margin: 2.75rem auto;
+	}
+}
+
+/* Mobile Screens */
+@media (max-width: 440px) {
+	.navbar {
+		display: none;
+	}
+	.side-navbar-button {
+		display: block;
+	}
+	.page-body {
+		margin: 0;
+	}
 }
